use pygments for code highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,8 @@ bing_verify:
 timezone:    Europe/Berlin
 future:      true
 markdown:    kramdown
-highlighter: rouge
+highlighter: pygments
+#highlighter: rouge
 
 gems:
   - jekyll-sitemap
