--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@ source: .
 
 title:            Kontext E Tech Blog
 description:      Geräusche aus dem Maschinenraum
-disqus_shortname: hpstrtheme
+disqus_shortname: ketechblog
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url:
+url: http://techblog.kontext-e.de
 
 # Owner/author information
 owner:
@@ -43,8 +43,8 @@ bing_verify:
 timezone:    Europe/Berlin
 future:      true
 markdown:    kramdown
-highlighter: pygments
-#highlighter: rouge
+#highlighter: pygments
+highlighter: rouge
 
 gems:
   - jekyll-sitemap
