Am Layout gearbeitet

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ source: .
 
 title:            Kontext E Tech Blog
 description:      Geräusche aus dem Maschinenraum
-disqus_shortname: ketechblog
+#disqus_shortname: ketechblog
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
