changed author information

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: http://techblog.kontext-e.de
 
 # Owner/author information
 owner:
-  name:           Kontext E GmbH
+  name:           Jens Nerche
   avatar:         kelogo.jpg
   bio:            "We develop your software."
   email:          j.nerche@kontext-e.de
