--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: http://techblog.kontext-e.de
+url: https://techblog.kontext-e.de
 
 # Owner/author information
 owner:
